<resources>
    <string name="app_name">App Manager</string>
    <string name="loadingReservationsStr">Učitavanje rezervacija!\nMolim pričekajte...</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refresh_str">Osvježi</string>
    <string name="new_reservation_str">Nova rezervacija</string>
    <string name="tourists_name">Ime gosta</string>
    <string name="check_in_date">Datum dolaska</string>
    <string name="check_out_date">Datum odlaska</string>
    <string name="price_per_day">Cijena po danu</string>
    <string name="total_price">Ukupna cijena</string>
    <string name="additional_info">Dodatne informacije</string>
    <string name="notes">Napomena</string>
    <string name="save">Spremi</string>
    <string name="discard">Odbaci</string>
    <string name="number_of_persons">Broj osoba</string>
    <string name="number_of_adults">Broj odraslih</string>
    <string name="number_of_children">Broj djece</string>
    <string name="city">Grad</string>
    <string name="country">Država</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Broj telefona</string>
    <string name="pets">Životinje</string>
    <string name="advanced_payment_check_box">Uplaćena akontacija</string>
    <string name="advanced_payment_currency">Valuta akontacije</string>
    <string name="advanced_payment_amount">Iznos akontacije</string>
    <string name="apartment_name">Apartman</string>
    <string name="saving_reservation_successful">Rezervacija uspješno spremljena</string>
    <string name="saving_reservation_not_successful">Spremanje rezervacije nije uspjelo</string>
    <string-array name="advanced_payment_currency_array">
        <item>EUR</item>
        <item>HRK</item>
    </string-array>
</resources>
