<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/new_reservation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/new_reservation_str"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tourists_name"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/tourists_name"/>

        <EditText
            android:id="@+id/tourists_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="22sp"
            android:padding="20dp"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apartment_name"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/apartment"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/apartment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_in_date"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/check_in_date" />

        <EditText
            android:id="@+id/check_in_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:padding="20dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_out_date"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/check_out_date"/>

        <EditText
            android:id="@+id/check_out_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:padding="20dp"
            android:importantForAutofill="no"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_per_day"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/price_per_day"/>

        <EditText
            android:id="@+id/price_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:padding="20dp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="22sp"
            android:padding="20dp"
            android:labelFor="@id/total_price"/>

        <EditText
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:padding="20dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/additional_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_info"
            android:textSize="22sp"
            android:padding="20dp"
            android:drawableStart="@drawable/ic_add_black_24dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save"
                android:text="@string/save"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:background="@color/green"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/discard"
                android:text="@string/discard"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:background="@color/red"
                style="?android:attr/buttonBarButtonStyle"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>